<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/maxMargin"
        android:layout_marginVertical="@dimen/minMargin"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/maxMargin">

            <TextView
                android:id="@+id/collegeNameLog"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/poppins_medium"
                android:padding="5dp"
                android:text="@string/collegeName"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circular_avatar"
                android:minWidth="20dp"
                android:minHeight="20dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <Button
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_notifications"
                    android:contentDescription="@string/numberOfRequestNotification" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/welcomeToUser"
            android:textColor="@color/primaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="@dimen/maxMargin"
            android:autofillHints="false"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_search_icon"
            android:elevation="6dp"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:paddingHorizontal="25dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_request_card"
            android:minHeight="100dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50sp"
                    android:background="@drawable/circular_avatar"
                    android:contentDescription="@string/avatar1"
                    android:padding="2dp"
                    android:src="@drawable/facebook"
                    android:translationX="12dp"
                    android:translationY="25dp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50sp"
                    android:background="@drawable/circular_avatar"
                    android:contentDescription="@string/avatar1"
                    android:padding="2dp"
                    android:src="@drawable/google"
                    android:translationX="30dp"
                    android:translationY="25dp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50sp"
                    android:background="@drawable/circular_avatar"
                    android:contentDescription="@string/avatar1"
                    android:padding="2dp"
                    android:src="@drawable/google"
                    android:translationX="50dp"
                    android:translationY="25dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/numberOfRequestNotification"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:translationX="120dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/arrowRight"
                        android:src="@drawable/ic_arrow_right"
                        android:translationX="100dp" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/maxMargin"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/upcomingEvents"
            android:textColor="@color/primaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>